src/app/views/overview/overview.component.scss
@import '/src/styles.scss';

.diagram-container{
  display: flex;
  gap: 5%;
  margin: 0 2em;
}

#top-diagrams {
  height: 60%;
}

#top-kpis {
  height: 20%;
}

#bottom-kpis {
  height: 15%;
}

.page-container {
  width: 100%;
  height: calc(100vh - 110px);
  display: flex;
  flex-direction: column;
}

.item{
  flex: 1 1 auto;
  height: 100%;
}

.top-item{
  min-height: 300px; //adjust to increase the height of the top diagramms ex 40vh
  width: 47.5%;
}

.bottom-item{
  width: 23.75%;
  min-height: 100px;
}

.bottom-item-with-icon {
  min-height: 200px;
}

.sub-kpi-container {
  display: flex;
  width: 47.5%;
  height: 100%;
  gap: inherit;
}

@media (max-height: 1050px) {
  .diagram-container {
    height: 100%;
  }
  .page-container {
    height: 100%;
  }

  #top-diagrams {
    height: 100%;
  }

}

@media (max-width: 1200px) {
  .diagram-container {
    flex-direction: column;
    height: auto !important;
  }

  .top-item {
    width: 100%;
  }

  #top-diagrams {
    margin-bottom: 20%;
  }

  .sub-kpi-container {
    width: 100%;
  }
}

@media (max-width: 850px) {
  .sub-kpi-container {
    flex-direction: column;
  }

  .item {
    width: 100%;
  }

  #top-diagrams {
    margin-bottom: 40%;
  }
}

